Enhancements to support Rego to AST
Issue-ID: POLICY-5563
